k8s/notification-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-depl
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: pushpakumara/notification-service:v18
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service-svc
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  ports:
  - port: 80
    targetPort: 8083
