k8s/order-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-depl
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: pushpakumara/order-service:v12
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-svc
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
  - port: 8082
    targetPort: 8082
