k8s/product-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-depl
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: pushpakumara/product-service:v17
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
        startupProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8081
          failureThreshold: 25
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8081
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8081
          failureThreshold: 2
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: product-service-svc
  labels:
    app: product-service
spec:
  selector:
    app: product-service
  ports:
  - port: 80
    targetPort: 8081
