k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: spring-microservice-k8s.com
    http:
      paths:
      - path: /order-service(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: order-service-svc
            port: 
              number: 8082
      - path: /product-service(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: product-service-svc
            port: 
              number: 8081
      - path: /notification-service(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notification-service
            port: 
              number: 8083
